--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="178">
 <!-- Seção do Cabeçalho Início -->
-
+  <div id="dvBloquearTelaTotal" class="AlertLoadingTotal" style="display: none;">
+  </div>
 <section id="Inicio" class="row">
         <div class="divTopHeader">
             <div class="container">
