Ajustando o envio de  e-mail do site.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="js/bootstrap.js" ></script>
     <script type="text/javascript" src="js/jquery.mask.js" ></script>
     <script type="text/javascript" src="js/jquery-ui.min.js" ></script>
-    <script type="text/javascript" src="js/index.js" ></script>
+    <script type="text/javascript" src="js/index.js" charset="UTF-8" ></script>
     <title>Santos Toledo Advogados Associados</title>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="178">
