Começando a ajustar as cores do site.

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="row">
             <div class="container">
                 <div class="col-sm-4">
-                    <div class="panel panel-default panelservicos">
+                    <div class="panel panel-1 panelservicos">
                         <div class="panel-heading">
                             <img src="content/lawyer.svg" class="imgservicosw" >
                             <h4 class="labelservicos">Civil </h4>
@@ -172,7 +172,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="panel panel-default panelservicos">
+                    <div class="panel panel-2 panelservicos">
                         <div class="panel-heading">
                             <img src="content/funcionarios.svg" class="imgservicosw" >
                             <h4 class="labelservicos">Direito do Trabalho </h4>
