tentando ajustar as cores
Ajustando aqui as cores.

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="panel panel-default panelservicos">
+                    <div class="panel panel-3 panelservicos">
                         <div class="panel-heading">
                             <img src="content/consumidor.svg" class="imgservicosw" >
                             <h4 class="labelservicos">Direito Consumidor</h4>
@@ -215,7 +215,7 @@
         <div class="row">
             <div class="container">
                 <div class="col-sm-4">
-                    <div class="panel panel-default panelservicos">
+                    <div class="panel panel-4 panelservicos">
                         <div class="panel-heading">
                             <img src="content/inventario.svg" class="imgservicosw" >
                             <h4 class="labelservicos">Iventários e testamentos </h4>
@@ -234,7 +234,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="panel panel-default panelservicos">
+                    <div class="panel panel-5 panelservicos">
                         <div class="panel-heading">
                             <img src="content/acordo.svg" class="imgservicosw" >
                             <h4 class="labelservicos">Previdenciário </h4>
@@ -253,7 +253,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="panel panel-default panelservicos">
+                    <div class="panel panel-6 panelservicos">
                         <div class="panel-heading">
                             <img src="content/direito.svg" class="imgservicosw" >
                             <h4 class="labelservicos">Direito Criminal</h4>
