Começando a ajustar as cores do site.

--- a/index.html
+++ b/index.html
@@ -17,31 +17,24 @@
     <script type="text/javascript" src="js/index.js" charset="UTF-8" ></script>
     <title>Santos Toledo Advogados Associados</title>
 </head>
-<body data-spy="scroll" data-target=".navbar" data-offset="178">
+<body data-spy="scroll" data-target=".navbar" data-offset="120">
 <!-- Seção do Cabeçalho Início -->
   <div id="dvBloquearTelaTotal" class="AlertLoadingTotal" style="display: none;">
   </div>
-<section id="Inicio" class="row">
-        <div class="divTopHeader">
-            <div class="container">
-                <span class="spanTopLeft">
-                 <span class="glyphicon glyphicon-phone-alt" style="margin-right:15px;"></span>
-                    31 2514-0564 | 98886-3487
-                </span>
-                <a href="mailto:contato@santostoledo.com.br" alt="Envie-nos um e-mail."><span class="glyphicon glyphicon-envelope spanTopRightGlyph" style="margin-right: 70px;"></span></a>
-                <a href="http://www.facebook.com/santostoledoadvogados" target="_blank" alt="Envie-nos um e-mail."> <span class="glyphicon glyphicon-thumbs-up spanTopRightGlyph"></span></a>
-            </div>
+<section id="Inicio" class="row divTopHeader">
+    <div class="container paddingHeader">
+        <div class="col-sm-4">
+            <img src="content/logobranco.png" class="img-responsive" alt="Santos Toledo Advogados associados" style="width: 550px;"/>
         </div>
-    <div class="fundobranco divLogo ">
-        <div class="container ">
-		  <div class="col-sm-4"></div>
-            <div class="col-sm-4">
-                <img src="content/logo.png" class="img-responsive" alt="Santos Toledo Advogados associados" style="width: 450px;"/>
-            </div>
-		   <div class="col-sm-4"></div>
+        <div class="col-sm-8">
+            <a href="http://www.facebook.com/santostoledoadvogados" target="_blank" > <img class="spanTopRightGlyph" src="content/iconlinkeding.svg" style="width:45px" alt="Acesso nosso nosso linkeding"/> </a>
+            <a href="http://www.facebook.com/santostoledoadvogados" target="_blank" > <img class="spanTopRightGlyph" src="content/iconwhatsapp.svg" style="width:45px" alt="Envie-nos um whatsapp"/> </a>
+            <a href="http://www.facebook.com/santostoledoadvogados" target="_blank" > <img class="spanTopRightGlyph" src="content/icontwitter.svg" style="width:45px" alt="Acesse nosso twitter"/> </a>
+            <a href="http://www.facebook.com/santostoledoadvogados" target="_blank" > <img class="spanTopRightGlyph" src="content/iconistagram.svg" style="width:45px" alt="Acesse nosso instagram"/> </a>
+            <a href="http://www.facebook.com/santostoledoadvogados" target="_blank" > <img class="spanTopRightGlyph" src="content/iconfacebook.svg" style="width:45px" alt="Acesse nosso facebook"/> </a>
         </div>
     </div>
-	<nav class="navbar navbar-default" data-spy="affix" data-offset-top="178">
+	<nav class="navbar navbar-default" data-spy="affix" data-offset-top="120">
   <div class="row">
 	  <div class="container">
 	   <div class="col-sm-1"></div>
@@ -114,7 +107,7 @@
 </div>
 </section >
 <section id="Sobre">
-    <div class="row fundobranco" >
+    <div class="row fundoazulcinza" >
         <div class="container marginTopBottom">
             <div class="col-sm-1"></div>
             <div class="col-sm-10 text-center">
@@ -127,13 +120,17 @@
             <div class="col-sm-1"></div>
         </div>
     </div>
-    <div class="row fundobranco" >
+    <div class="row fundoazulcinza paddingHeader" >
         <div class="container">
-            <div class="col-sm-1"></div>
-            <div class="col-sm-10">
-                <img src="content/contatossite.svg" class="img-responsive" style="margin-top:-40px" alt="Contatos Santos Toledo">
+            <div class="col-sm-4">
+                <img src="content/minibannerfacebook.svg" class="img-responsive" alt="Contatos Santos Toledo">
             </div>
-            <div class="col-sm-1"></div>
+            <div class="col-sm-4">
+                <img src="content/minibannerwhatsapp.svg" class="img-responsive" alt="Contatos Santos Toledo">
+            </div>
+            <div class="col-sm-4">
+                <img src="content/minibannertelefone.svg" class="img-responsive"  alt="Contatos Santos Toledo">
+            </div>
         </div>
     </div>
 </section>
@@ -151,7 +148,7 @@
         <div class="row">
             <div class="container">
                 <div class="col-sm-4">
-                    <div class="panel panel-1 panelservicos">
+                    <div class="panel panel-3 panelservicos">
                         <div class="panel-heading">
                             <img src="content/lawyer.svg" class="imgservicosw" >
                             <h4 class="labelservicos">Civil </h4>
@@ -172,7 +169,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="panel panel-2 panelservicos">
+                    <div class="panel panel-3 panelservicos">
                         <div class="panel-heading">
                             <img src="content/funcionarios.svg" class="imgservicosw" >
                             <h4 class="labelservicos">Direito do Trabalho </h4>
@@ -215,7 +212,7 @@
         <div class="row">
             <div class="container">
                 <div class="col-sm-4">
-                    <div class="panel panel-4 panelservicos">
+                    <div class="panel panel-3 panelservicos">
                         <div class="panel-heading">
                             <img src="content/inventario.svg" class="imgservicosw" >
                             <h4 class="labelservicos">Iventários e testamentos </h4>
@@ -234,7 +231,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="panel panel-5 panelservicos">
+                    <div class="panel panel-3 panelservicos">
                         <div class="panel-heading">
                             <img src="content/acordo.svg" class="imgservicosw" >
                             <h4 class="labelservicos">Previdenciário </h4>
@@ -253,7 +250,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="panel panel-6 panelservicos">
+                    <div class="panel panel-3 panelservicos">
                         <div class="panel-heading">
                             <img src="content/direito.svg" class="imgservicosw" >
                             <h4 class="labelservicos">Direito Criminal</h4>
