Ajustando a m do layoute
mudando as cores

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         </div>
                         <div class="panel-body">
                             <p class="text-justify" style="font-size: medium;">
-                             <ul>
+                             <ul class="listservicos">
                                 <li>Indenizações.</li>
                                 <li>Responsabilidade Civil.</li>
                                 <li>Acompanhamento de contratos civis.</li>
@@ -176,7 +176,7 @@
                         </div>
                         <div class="panel-body">
                             <p class="text-justify" style="font-size: medium;">
-                            <ul>
+                            <ul class="listservicos">
                                 <li>Ações trabalhistas.</li>
                                 <li>Auditoria Trabalhista em Empresas.</li>
                                 <li>Acidentes de Trabalho.</li>
@@ -194,7 +194,7 @@
                         </div>
                         <div class="panel-body">
                             <p class="text-justify" style="font-size: medium;">
-                            <ul>
+                            <ul class="listservicos">
                                 <li>Direito do Consumidor.</li>
                                 <li>Danos Morais.</li>
                                 <li>Empresas Aéreas – Abusos.</li>
@@ -219,7 +219,7 @@
                         </div>
                         <div class="panel-body">
                             <p class="text-justify" style="font-size: medium;">
-                            <ul>
+                            <ul class="listservicos">
                                 <li>Inventários.</li>
                                 <li>Inventário Judicial.</li>
                                 <li>Inventário Extrajudicial – Cartorário.</li>
@@ -238,7 +238,7 @@
                         </div>
                         <div class="panel-body">
                             <p class="text-justify" style="font-size: medium;">
-                            <ul>
+                            <ul class="listservicos">
                                 <li>Aposentadoria por idade.</li>
                                 <li>Aponsentadoria por invalidez.</li>
                                 <li>Pensão por morte.</li>
@@ -257,7 +257,7 @@
                         </div>
                         <div class="panel-body">
                             <p class="text-justify" style="font-size: medium;">
-                            <ul>
+                            <ul class="listservicos">
                                 <li>Crimes contra a ordem econômica.</li>
                                 <li>Plantão Criminal.</li>
                                 <li>Crimes Societários e Falimentares.</li>
@@ -274,13 +274,13 @@
         </div>
     </div>
 </section>
-<section id="Associados" class="fundocinza paddings">
+<section id="Associados" class="fundoazul paddings">
     <div class="container">
-        <div class="row fundocinza" >
+        <div class="row" >
             <div class="container">
                 <div class="col-sm-1"></div>
                 <div class="col-sm-10 text-center">
-                    <p class="labelSobreTitulo">Nossos associados:</p>
+                    <p class="titulosectionassociados">Nossos associados:</p>
                 </div>
                 <div class="col-sm-1"></div>
             </div>
@@ -296,7 +296,7 @@
                                 <div>
                                     <div class="text-center">
                                         <img class="img-circle" style="width:140px;" src="content/associado1.jpg" alt="Lorem ipsum" />
-                                        <h3 class="labelAssociadoTitulo">Dr. Antônio dos Santos Toledo</h3>
+                                        <h3 class="labelAssociadoTitulo">Dr.José Antônio dos Santos Toledo</h3>
                                         <p class="textoAssociado" style="font-size: medium;">
                                             Advogado formado pela FEAD - Centro de Gestão Empreendedora. Pós-graduado em Direito e Processo do Trabalho e Previdenciário.<br/>
                                             Sócio fundador do Escritório Santos Toledo Advogados Associados, atuando nas áreas civil, trabalhista e previdenciário.
