--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Prestação de serviços jurídicos de maneira ética e responsável primando pela confiança, responsabilidade e dedicação." />
+    <meta name="LANGUAGE" CONTENT="PT">
+    <meta name="keywords" content="escritório advocacia; advogados associados; advogado bh; OAB; Sociedade Advogados; advogados bh; advogados belo horizonte; advocacia;advogados;civil;direito do trabalho;Direito Consumidor;Iventários e testamentos;Previdenciário;Direito Criminal">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css" />
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css" />
@@ -107,7 +110,7 @@
 </div>
 </section >
 <section id="Sobre">
-    <div class="row fundoazulcinza" >
+    <div class="row fundoazul" >
         <div class="container marginTopBottom">
             <div class="col-sm-1"></div>
             <div class="col-sm-10 text-center">
@@ -120,7 +123,7 @@
             <div class="col-sm-1"></div>
         </div>
     </div>
-    <div class="row fundoazulcinza paddingHeader" >
+    <div class="row fundoazul paddingHeader" >
         <div class="container">
             <div class="col-sm-4">
                 <img src="content/minibannerfacebook.svg" class="img-responsive" alt="Contatos Santos Toledo">
