Começando a ajustar as cores do site.

--- a/index.html
+++ b/index.html
@@ -75,25 +75,21 @@
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
+
             <div class="item active">
-                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/santosToledo.jpg" alt="Santos Toledo Advogados Associados" />
+                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/bannerdireitotrabalhador.png" alt="Direito dos trabalhadores - Saiba tudo sobre seus direitos" />
             </div>
 
             <div class="item">
-                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/banner1.jpg" alt="Direito dos trabalhadores - Saiba tudo sobre seus direitos" />
+                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/banneraponsetadoria.jpg" alt="Direito dos Consumidores - Consumidores têm direitos que desconhecem." />
             </div>
 
             <div class="item">
-                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/banner2.jpg" alt="Direito dos Consumidores - Consumidores têm direitos que desconhecem." />
-            </div>
-
-            <div class="item">
-                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/banner3.jpg" alt="Previdência - Garanta uma aponsentadoria tranquila." />
+                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/bannerdireitoconsumidor.png" alt="Previdência - Garanta uma aponsentadoria tranquila." />
             </div>
         </div>
 
@@ -267,9 +263,72 @@
                                 <li>Crimes Previdenciários e Tributários.</li>
                             </ul>
                             </p>
-                           <!-- <div class="text-center">
-                                <a href="#" class="btn btn-default">Mais atuações </a>
-                            </div>-->
+                            <!-- <div class="text-center">
+                                 <a href="#" class="btn btn-default">Mais atuações </a>
+                             </div>-->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="container">
+                <div class="col-sm-4">
+                    <div class="panel panel-3 panelservicos">
+                        <div class="panel-heading">
+                            <img src="content/familia.svg" class="imgservicosw" >
+                            <h4 class="labelservicos">Direito de Familia </h4>
+                        </div>
+                        <div class="panel-body">
+                            <p class="text-justify" style="font-size: medium;">
+                            <ul class="listservicos">
+                                <li>Divórcio – Consensual e Litigioso</li>
+                                <li>Investigação e Negativa de Paternidade</li>
+                                <li>Guarda Compartilhada</li>
+                                <li>Pensão Alimentícia</li>
+                            </ul>
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="panel panel-3 panelservicos">
+                        <div class="panel-heading">
+                            <img src="content/carro.svg" class="imgservicosw" >
+                            <h4 class="labelservicos">DPVAT - Transportes</h4>
+                        </div>
+                        <div class="panel-body">
+                            <p class="text-justify" style="font-size: medium;">
+                            <ul class="listservicos">
+                                <li>Seguros DPVAT</li>
+                                <li>Acidentes de Trânsito</li>
+                                <li>Trânsito e Transporte</li>
+                                <li>Seguro de Automóveis</li>
+                            </ul>
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="panel panel-3 panelservicos">
+                        <div class="panel-heading">
+                            <img src="content/imobiliario.svg" class="imgservicosw" >
+                            <h4 class="labelservicos">Direito Imobiliário</h4>
+                        </div>
+                        <div class="panel-body">
+                            <p class="text-justify" style="font-size: medium;">
+                            <ul class="listservicos">
+                                <li>Locações e Despejos</li>
+                                <li>Direitos dos Locatários</li>
+                                <li>Regularização de Imóveis e Escrituras</li>
+                                <li>Revisão de aluguéis</li>
+                            </ul>
+                            </p>
+                            <!-- <div class="text-center">
+                                 <a href="#" class="btn btn-default">Mais atuações </a>
+                             </div>-->
                         </div>
                     </div>
                 </div>
