Começando a ajustar as cores do site.

--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
             <img src="content/logobranco.png" class="img-responsive" alt="Santos Toledo Advogados associados" style="width: 550px;"/>
         </div>
         <div class="col-sm-8">
-            <a href="http://www.facebook.com/santostoledoadvogados" target="_blank" > <img class="spanTopRightGlyph" src="content/iconlinkeding.svg" style="width:45px" alt="Acesso nosso nosso linkeding"/> </a>
-            <a href="http://www.facebook.com/santostoledoadvogados" target="_blank" > <img class="spanTopRightGlyph" src="content/iconwhatsapp.svg" style="width:45px" alt="Envie-nos um whatsapp"/> </a>
-            <a href="http://www.facebook.com/santostoledoadvogados" target="_blank" > <img class="spanTopRightGlyph" src="content/icontwitter.svg" style="width:45px" alt="Acesse nosso twitter"/> </a>
-            <a href="http://www.facebook.com/santostoledoadvogados" target="_blank" > <img class="spanTopRightGlyph" src="content/iconistagram.svg" style="width:45px" alt="Acesse nosso instagram"/> </a>
+            <a href="https://www.linkedin.com/in/jose-antonio-dos-san-toledo-562a2b2b/?trk=public-profile-join-page" target="_blank" > <img class="spanTopRightGlyph" src="content/iconlinkeding.svg" style="width:45px" alt="Acesso nosso nosso linkeding"/> </a>
+            <a href="https://twitter.com/joseantoniotole" target="_blank" > <img class="spanTopRightGlyph" src="content/icontwitter.svg" style="width:45px" alt="Acesse nosso twitter"/> </a>
+            <a href="https://www.instagram.com/joseantoniotoledo/?hl=pt-br" target="_blank" > <img class="spanTopRightGlyph" src="content/iconistagram.svg" style="width:45px" alt="Acesse nosso instagram"/> </a>
             <a href="http://www.facebook.com/santostoledoadvogados" target="_blank" > <img class="spanTopRightGlyph" src="content/iconfacebook.svg" style="width:45px" alt="Acesse nosso facebook"/> </a>
         </div>
     </div>
@@ -75,12 +74,18 @@
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="4"></li>
+            <li data-target="#myCarousel" data-slide-to="5"></li>
         </ol>
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
-
             <div class="item active">
+                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/bannerdireitofamilia.jpg" alt="Previdência - Garanta uma aponsentadoria tranquila." />
+            </div>
+
+            <div class="item">
                 <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/bannerdireitotrabalhador.png" alt="Direito dos trabalhadores - Saiba tudo sobre seus direitos" />
             </div>
 
@@ -89,7 +94,15 @@
             </div>
 
             <div class="item">
+                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/bannerdireitocriminal.jpg" alt="Previdência - Garanta uma aponsentadoria tranquila." />
+            </div>
+
+            <div class="item">
                 <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/bannerdireitoconsumidor.png" alt="Previdência - Garanta uma aponsentadoria tranquila." />
+            </div>
+
+            <div class="item">
+                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/bannerdireitosucessorio.jpg" alt="Previdência - Garanta uma aponsentadoria tranquila." />
             </div>
         </div>
 
@@ -150,7 +163,7 @@
                     <div class="panel panel-3 panelservicos">
                         <div class="panel-heading">
                             <img src="content/lawyer.svg" class="imgservicosw" >
-                            <h4 class="labelservicos">Civil </h4>
+                            <h4 class="labelservicos">Direito Civil </h4>
                         </div>
                         <div class="panel-body">
                             <p class="text-justify" style="font-size: medium;">
@@ -195,6 +208,7 @@
                             <p class="text-justify" style="font-size: medium;">
                             <ul class="listservicos">
                                 <li>Direito do Consumidor.</li>
+                                <li>Limpeza SPC/SERASA E BOA VISTA</li>
                                 <li>Danos Morais.</li>
                                 <li>Empresas Aéreas – Abusos.</li>
                                 <li>Turismo e Hotéis.</li>
@@ -214,7 +228,7 @@
                     <div class="panel panel-3 panelservicos">
                         <div class="panel-heading">
                             <img src="content/inventario.svg" class="imgservicosw" >
-                            <h4 class="labelservicos">Iventários e testamentos </h4>
+                            <h4 class="labelservicos">Inventários e testamentos </h4>
                         </div>
                         <div class="panel-body">
                             <p class="text-justify" style="font-size: medium;">
@@ -233,7 +247,7 @@
                     <div class="panel panel-3 panelservicos">
                         <div class="panel-heading">
                             <img src="content/acordo.svg" class="imgservicosw" >
-                            <h4 class="labelservicos">Previdenciário </h4>
+                            <h4 class="labelservicos">Direito Previdenciário </h4>
                         </div>
                         <div class="panel-body">
                             <p class="text-justify" style="font-size: medium;">
