--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
                             <!--<div class="text-center">
                                 <a href="#" class="btn btn-default">Mais atuações </a>
                             </div>-->
+
                         </div>
                     </div>
                 </div>
@@ -192,9 +193,35 @@
                                 <li>Ações trabalhistas.</li>
                                 <li>Auditoria Trabalhista em Empresas.</li>
                                 <li>Acidentes de Trabalho.</li>
+                                <li>Ressarcimentos</li>
                             </ul>
                             </p>
 
+                       <div class="text-right">
+                                  <img src="content/more.svg" class="btnmore" onclick="$('#direitotrabalhista').dialog({title:'Direito Previdenciário',width:550});" title="Mais atuações..." >
+                            </div>
+                        </div>
+                        <div id="direitotrabalhista" style="display: none;">
+                            <ul class="listservicos">
+                             <li>Ações trabalhistas.</li>
+                                <li>Auditoria Trabalhista em Empresas.</li>
+                                <li>Acidentes de Trabalho.</li>
+                                <li>Ressarcimento por:
+                                    <ul> 
+                                    <li>Trabalho sem carteira assinada</li>
+                                    <li>Cooperativas fraudulentas</li>
+                                    <li>Terceirizações ilegais</li>
+                                    <li>Estágios fraudulentos</li>
+                                    <li>Aplicação da "justa causa" de forma indevida</li>
+                                    <li>Pedidos de demissão forçados</li>
+                                    <li>Jornadas de trabalho abusivas</li>
+                                    <li>Fraudes na marcação do cartão de ponto ou da folha de presença</li>
+                                    <li>Horas extras não pagas</li>
+                                    <li>Condições de trabalho prejudiciais à saúde e segurança do trabalhador (insalubridade e periculosidade)</li>
+                                    <li>Assédio moral</li>
+                                    </ul>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -258,7 +285,24 @@
                                 <li>Revisão por benefício.</li>
                             </ul>
                             </p>
-
+                            <div class="text-right">
+                                  <img src="content/more.svg" class="btnmore" onclick="$('#direitoprevidenciario').dialog({title:'Direito Previdenciário',width:350});" title="Mais atuações..." >
+                            </div>
+                        </div>
+                        <div id="direitoprevidenciario" style="display: none;">
+                            <ul class="listservicos">
+                            <li>Aposentadoria por idade.</li>
+                            <li>Aponsentadoria por invalidez.</li>
+                            <li>Pensão por morte.</li>
+                            <li>Desaposentação</li>
+                            <li>Revisão de Benefícios Previdenciários</li>
+                            <li>Pensões, Pecúlios e Benefícios </li>
+                            <li>Previdenciários</li>
+                            <li>Concessão de Aposentadoria</li>
+                            <li>Inss – Requerimentos Administrativos</li>
+                            <li>LOAS – Assistência Social</li>
+                            <li>Previdência Privada e Fundos de Pensão</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -277,9 +321,28 @@
                                 <li>Crimes Previdenciários e Tributários.</li>
                             </ul>
                             </p>
-                            <!-- <div class="text-center">
-                                 <a href="#" class="btn btn-default">Mais atuações </a>
-                             </div>-->
+                         <div class="text-right">
+                                  <img src="content/more.svg" class="btnmore" onclick="$('#direitocriminal').dialog({title:'Direito Previdenciário',width:350});" title="Mais atuações..." >
+                            </div>
+                        </div>
+                        <div id="direitocriminal" style="display: none;">
+                            <ul class="listservicos">
+                                <li>Introdução</li>
+                                <li>Plantão Criminal</li>
+                                <li>Direito Penal Econômico</li>
+                                <li>Crimes contra a ordem econômica</li>
+                                <li>Crime de Lavagem de Dinheiro</li>
+                                <li>Crimes Societários e Falimentares</li>
+                                <li>Crimes contra a Administração do Trabalho</li>
+                                <li>Crimes Previdenciários e Tributários</li>
+                                <li>Licitações</li>
+                                <li>Crimes de Trânsito</li>
+                                <li>Eleitorais</li>
+                                <li>Crimes contra a Administração Pública</li>
+                                <li>Crimes virtuais</li>
+                                <li>Ambientais</li>
+                                <li>Direito Penal Geral</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -302,7 +365,26 @@
                                 <li>Pensão Alimentícia</li>
                             </ul>
                             </p>
-
+                             <div class="text-right">
+                                  <img src="content/more.svg" class="btnmore" onclick="$('#direitofamilia').dialog({title:'Direito de Família',width:350});" title="Mais atuações..." >
+                            </div>
+                        </div>
+                         <div id="direitofamilia" style="display: none;">
+                            <ul class="listservicos">
+                                <li>Divórcio – Consensual e Litigioso</li>
+                                <li>Investigação e Negativa de Paternidade</li>
+                                <li>Guarda de Menores</li>
+                                <li>Direito de Visitas – Regulamentação</li>
+                                <li>Guarda Compartilhada</li>
+                                <li>Adoções</li>
+                                <li>Pensão Alimentícia</li>
+                                <li>Exoneração de Alimentos</li>
+                                <li>Revisão de Alimentos</li>
+                                <li>União Estável – Criação e Dissolução</li>
+                                <li>União Estável Homoafetiva</li>
+                                <li>Interdição e Curatela</li>
+                                <li>Alienação Parental</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -340,9 +422,21 @@
                                 <li>Revisão de aluguéis</li>
                             </ul>
                             </p>
-                            <!-- <div class="text-center">
-                                 <a href="#" class="btn btn-default">Mais atuações </a>
-                             </div>-->
+                         <div class="text-right">
+                                  <img src="content/more.svg" class="btnmore" onclick="$('#direitoimobiliario').dialog({title:'Direito Previdenciário',width:350});" title="Mais atuações..." >
+                            </div>
+                        </div>
+                        <div id="direitoimobiliario" style="display: none;">
+                            <ul class="listservicos">
+                              <li>Locações e Despejos</li>
+                                <li>Direitos dos Locatários</li>
+                                <li>Condomínio – Direitos e Deveres</li>
+                                <li>Regularização de Imóveis e Escrituras</li>
+                                <li>Obras interditadas</li>
+                                <li>Defesa em Autuações</li>
+                                <li>Revisão de aluguéis</li>
+                                <li>Imóveis – Atraso na Entrega</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
